Some Code added

--- a/src/Components/Navigation/Navigation.module.css
+++ b/src/Components/Navigation/Navigation.module.css
@@ -52,7 +52,7 @@
 	position: absolute;
 	top: 0px;
 	right: -10px;
-	background: #53d87b;
+	background: #1d1d1d;
 	color: #fff;
 	padding: 5px;
 	width: 15px;
