--- a/src/Components/Cart/Cart.module.css
+++ b/src/Components/Cart/Cart.module.css
@@ -4,7 +4,7 @@
 	align-items: center;
 	height: 137px;
 	padding-bottom: 20px;
-	margin: 10px 0;
+	margin: 30px 0;
 	border-bottom: 1px solid #a3a3a3;
 	/* overflow: hidden; */
 }
@@ -33,4 +33,29 @@
 	border: 1px solid #a3a3a3;
 	font-size: 1rem;
 	padding: 5px 15px;
+}
+
+.attributes {
+	background: #fafafa;
+	border: 1px solid#eeeeee;
+	padding: 5px;
+	margin: 2px;
+}
+.attributes.active {
+	background: #58e984;
+	color: #fff;
+	font-weight: bold;
+}
+
+.attributesColor {
+	height: 20px;
+	width: 20px;
+	margin: 2px;
+	border: 1px solid #eeeeee;
+}
+.attributesColor.active {
+	outline-offset: 1px;
+	outline: 2px solid red;
+	/* border-radius: 5px; */
+	margin: 4px;
 }
