--- a/src/Components/Products/Product.module.css
+++ b/src/Components/Products/Product.module.css
@@ -53,3 +53,30 @@
 	top: -20%;
 	right: 5%;
 }
+
+.stockOut {
+	position: relative;
+	overflow: hidden;
+	opacity: 70%;
+}
+
+.stockOut::after {
+	content: 'Out of Stock';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	/* background-color: rgba(0, 0, 0, 0.379); */
+	color: rgb(24, 24, 24);
+	font-size: 2rem;
+	font-weight: bold;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.stockOut:hover {
+	cursor: not-allowed;
+}
