--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,12 @@
 	background: rgba(57, 55, 72, 0.22);
 	z-index: 9;
 }
+
+.container {
+	width: 80%;
+	margin: 0 auto;
+}
+
+a:visited {
+	color: rgb(29, 29, 29);
+}
