--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	min-height: 100vh;
+	min-height: 100%;
 	width: 100%;
 	transition: all 1s ease-in-out;
 	background: rgba(57, 55, 72, 0.22);
@@ -12,6 +12,7 @@
 .container {
 	width: 80%;
 	margin: 0 auto;
+	padding: 10px;
 }
 
 a:visited {
