--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	min-height: 100%;
+	bottom: 0;
+	right: 0;
+	min-height: 100vh;
 	width: 100%;
 	transition: all 1s ease-in-out;
 	background: rgba(57, 55, 72, 0.22);
